<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.problems</groupId>
	<artifactId>basic</artifactId>
	<version>0.0.1</version>
	<packaging>jar</packaging>

	<name>algorithms</name>
	<description>Optimal solutions of different problems in CS</description>

	<properties>
	    <project.build.javaVersion>1.8</project.build.javaVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<build>
		<plugins>
    		<plugin>    
        		<artifactId>maven-compiler-plugin</artifactId>
        		<configuration>
            		<source>1.8</source>
            		<target>1.8</target>
        		</configuration>
    		</plugin>
		</plugins>
	</build>

</project>
